--- a/index.html
+++ b/index.html
@@ -220,9 +220,8 @@
             <h2>Kontaktiere uns!</h2>
             <a href="mailto:info@swissprint3D.ch" target="_blank" class="no-underline">info@swissprint-3d.ch</a>
         </div>
-      
-      <div class="container mt-5">
-            <form action="https://hooks.airtable.com/workflows/v1/genericWebhook/appmwl7PxI9IGOHGv/wflMfJnbi2LDIlu7H/wtroRmzfMq5Knln90" method="POST" enctype="multipart/form-data">
+        <div class="container mt-5">
+            <form action="https://formspree.io/f/mvgajrve" method="POST">
               <div class="row">
                 <!-- Name Feld -->
                 <div class="col-md-6">
