Update index.html SEO optimiert

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Wir drucken, was du dir ausdenkst. 3D-Druck auf Anfrage oder eigene Produkte – präzise gefertigt in der Schweiz.">
-    <title>SwissPrint3D</title>
+    <title>SwissPrint-3D – Innovative 3D-Drucklösungen aus der Schweiz</title>
     <link rel="icon" type="image/x-icon" href="Bilder/v3-logo_v1-symbol.svg">
 
 
@@ -112,7 +112,7 @@
         <div class="text_vorstellung checklist-container">
             <p><strong>
                 ✓ Spezialisiert auf Klein und Mittelserien<br><br>
-                ✓ Massgeschneiderter Service<br><br>
+                ✓ Massgeschneiderter 3D-Druck Service<br><br>
                 ✓ Hochwertige Materialien<br><br>
                 ✓ Innovativ und Zuverlässig
             </strong></p>
@@ -123,7 +123,7 @@
 
 
     <div class="produkte">
-        <h2 class="titel_produkte"><strong>Überzeuge dich von den Produkten</strong></h2>
+        <h2 class="titel_produkte"><strong>Überzeuge dich von den Möglichkeiten</strong></h2>
 
         <div class="beispiele_produkte">
 
@@ -154,7 +154,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active bg-grey">
                 <div class="d-flex justify-content-center align-items-center h-90">
-                    <img src="Bilder/Schlauchmanschette_transparent3.png" class="carousel-img">
+                    <img src="Bilder/Schlauchmanschette_transparent3.png" class="carousel-img" alt="Schlauchmanschette">
                 </div>
                 <div class="carousel-caption">
                     <h5>Schlauchmanschette</h5>
@@ -165,7 +165,7 @@
     
             <div class="carousel-item" data-bs-interval="2000">
                 <div class="d-flex justify-content-center align-items-center h-100">
-                <img src="Bilder/spezialschlüssel1.png" class="carousel-img">
+                <img src="Bilder/spezialschlüssel1.png" class="carousel-img" alt="Spezialschlüssel">
                 <div class="carousel-caption">
                     <h5>Spezialschlüssel</h5>
                     <p class="beschreibung_carousel">Zum festziehen von Sternschrauben</p>
@@ -175,7 +175,7 @@
             </div>
     
             <div class="carousel-item ">
-                <img src="#" class="w-100">
+                <img src="#" class="w-100" alt="Bilder folgen...">
                 <div class="carousel-caption">
                     <h5>Bilder folgen...</h5>
                     <p class="beschreibung_carousel">
